--- a/style/style.css
+++ b/style/style.css
@@ -3,9 +3,9 @@
 
 /*variables*/
 :root {
-  --primary-color: #161;
-  --second-color: #161616;
-  --bg-color: #b4ab49;
+  --primary-color: #003da5;
+  --second-color: #dc1c2e;
+  --bg-color: #fafafa;
 }
 /*reset*/
 * {
@@ -23,6 +23,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  border-top: 4px solid var(--second-color);
 }
 
 .logo {
@@ -37,10 +38,12 @@
   font-weight: 700;
   margin-top: 10px;
   color: var(--primary-color);
+  border-bottom: 2px solid var(--second-color);
 }
 
 .logo small {
   color: var(--second-color);
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
@@ -53,4 +56,8 @@
 
 .navbar a {
   color: var(--primary-color);
+}
+
+.navbar a:hover {
+  border-bottom: 2px solid var(--second-color);
 }
