--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,13 @@ body {
   background-color: var(--bg-color);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 a {
   text-decoration: none;
   transition: all 0.5s ease-out;
@@ -54,29 +61,22 @@ h2 {
   font-size: 2rem;
 }
 
-/* img {
+img {
   max-width: 100%;
   height: auto;
-} */
+}
 
 /*****************************************************/
 /*******************HEADER****************************/
 /*****************************************************/
 
 .header {
-  background-image: linear-gradient(
-    to bottom,
-    #e6e9f7,
-    #edeef9,
-    #f4f4fb,
-    #faf9fd,
-    #ffffff
-  );
+  background: linear-gradient(to top, #e6e9f7, #fff);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   border-top: 2px solid var(--second-color);
-  padding: 0.5rem 3rem;
+  padding: 2rem 0;
   position: sticky;
   top: 0;
   height: var(--header-height);
@@ -139,9 +139,8 @@ ul li a {
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 5rem;
-  background-color: #ffffff;
+  padding: 0 2rem;
+  max-width: var(--max-width);
 }
 
 .hero-info {
@@ -156,7 +155,7 @@ ul li a {
 }
 
 .hero img {
-  width: 55%;
+  width: 60%;
 }
 
 .hero-btns {
@@ -177,7 +176,7 @@ ul li a {
 }
 
 .btn-secondary {
-  background-color: var(--bg-color);
+  background-color: #fff;
   color: var(--primary-color);
 }
 
@@ -189,15 +188,14 @@ ul li a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 0 4rem;
+  padding: 0 2rem;
   gap: 3rem;
   height: 100vh;
+  max-width: var(--max-width);
 }
 
 .servicios p {
   letter-spacing: 2px;
-  width: 70%;
   text-align: center;
   color: var(--second-color);
   font-size: 1.2rem;
@@ -243,7 +241,7 @@ ul li a {
     text-align: center;
   }
 
-  .servicios p {
+  .hero img {
     width: 100%;
   }
 }
@@ -255,12 +253,20 @@ ul li a {
 
   .hero {
     padding: 0 1rem;
+    height: 80vh;
   }
-  .hero img {
+
+  .hero img,
+  .servicios img {
     display: none;
   }
 
   .servicios {
     padding: 0 1rem;
+    height: 80vh;
+  }
+
+  .servicios h2 {
+    text-align: center;
   }
 }
