intercambiando colores del texto y titulos

--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,8 @@
 /*****************************************************/
 
 :root {
-  --primary-color: #003da5;
-  --second-color: #dc1c2e;
+  --second-color: #003da5;
+  --primary-color: #dc1c2e;
   --bg-color: #e6e9f7;
 
   --font: "Poppins", sans-serif;
