--- a/style/style.css
+++ b/style/style.css
@@ -9,9 +9,9 @@
 /*****************************************************/
 
 :root {
-  --second-color: #003da5;
-  --primary-color: #dc1c2e;
-  --bg-color: #e6e9f7;
+  --second-color: #222831;
+  --primary-color: #393e46;
+  --bg-color: #00adb5;
 
   --font: "Poppins", sans-serif;
 
@@ -61,7 +61,7 @@ h2 {
   font-size: 2rem;
 }
 
-img {
+svg {
   max-width: 100%;
   height: auto;
 }
@@ -71,7 +71,7 @@ img {
 /*****************************************************/
 
 .header {
-  background: linear-gradient(to top, #e6e9f7, #fff);
+  background-color: #eeeeee;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -141,6 +141,7 @@ ul li a {
   align-items: center;
   padding: 0 2rem;
   max-width: var(--max-width);
+  gap: 1rem;
 }
 
 .hero-info {
@@ -152,10 +153,6 @@ ul li a {
 .hero-info p {
   color: var(--second-color);
   font-size: 1.2rem;
-}
-
-.hero img {
-  width: 60%;
 }
 
 .hero-btns {
@@ -176,8 +173,8 @@ ul li a {
 }
 
 .btn-secondary {
-  background-color: #fff;
-  color: var(--primary-color);
+  color: var(--second-color);
+  border: 1px solid #eeeeee;
 }
 
 /*****************************************************/
@@ -242,10 +239,6 @@ ul li a {
     text-align: center;
   }
 
-  .hero img {
-    width: 100%;
-  }
-
   .servicios {
     margin: 2rem 1rem;
   }
@@ -261,11 +254,6 @@ ul li a {
     height: 80vh;
   }
 
-  .hero img,
-  .servicios img {
-    display: none;
-  }
-
   .servicios {
     padding: 0 1rem;
     height: 80vh;
@@ -273,5 +261,12 @@ ul li a {
 
   .servicios h2 {
     text-align: center;
+  }
+}
+
+@media (max-width: 486px) {
+  .hero svg,
+  .servicios svg {
+    display: none;
   }
 }
