--- a/style/animaciones.css
+++ b/style/animaciones.css
@@ -15,3 +15,64 @@
 #toggle-menu:checked ~ .overlay {
   display: block;
 }
+
+/* Animaciones */
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(100px);
+  }
+
+  to {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes slide-right {
+  from {
+    transform: translateX(100px);
+  }
+
+  to {
+    transform: translateX(0px);
+  }
+}
+
+/*Animaciones section hero*/
+
+.hero-info h1 {
+  animation: fade 1s ease, slide-up 1.3s ease;
+}
+
+.hero-info p {
+  animation: fade 0.8s ease, slide-up 0.9s ease;
+}
+
+.hero-info a {
+  animation: fade 0.8s, slide-up 1.1s;
+}
+
+svg {
+  animation: fade 1s, slide-right 1.3s;
+}
+
+/* Animaciones section servicios */
+
+.servicios h2 {
+  opacity: 0;
+  animation: fade 0.8s 0.3s ease forwards, slide-up 0.9s 0.3s ease;
+}
+
+.servicios p {
+  opacity: 0;
+  animation: fade 0.9s 0.5s ease forwards, slide-right 1s 0.5s ease;
+}
